<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adivina">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txvNick"
            android:gravity="center"
            android:text="@string/nombre"
            android:textSize="16sp"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        </TextView>

        <TextView
            android:gravity="center_vertical|right"
            android:text="@string/lblScore"
            android:textSize="16sp"
            android:layout_weight="0.40"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        </TextView>

        <TextView
            android:id="@+id/txvScore"
            android:paddingLeft="5dp"
            android:gravity="center_vertical|left"
            android:text="@string/lblCero"
            android:textSize="14sp"
            android:layout_weight="0.10"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        </TextView>

    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical|left"
        android:text="@string/lblIncognita"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtNumeroElegido"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        app:met_floatingLabel="highlight"
        android:hint="@string/lblNAdivinar"
        android:layout_width="match_parent"
        android:layout_height="55dp">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical|left"
            android:text="@string/lblNIntentos"
            android:textSize="16sp"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/txvIntentos"
            android:gravity="center"
            android:text="@string/lblCero"
            android:textSize="16sp"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>

    <Button
        android:onClick="OnClickAdivinar"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:inputType="textPersonName"
        android:text="@string/btnAdivinar"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <TextView
        android:id="@+id/txvPistaPista"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/txvPista"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
</LinearLayout>