<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="OnClickJugar"
            android:text="@string/btnJugar"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:onClick="OnClickPuntajes"
            android:text="@string/btnPuntaje"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:onClick="OnClickVerRespuesta"
            android:text="@string/btnNumRandom"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:onClick="OnClickDatos"
            android:text="@string/btnDatos"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>
</ScrollView>